--- a/skills.html
+++ b/skills.html
@@ -44,7 +44,7 @@
                     <li><a href="skills.html" class="nav-link active"><i class="fas fa-chart-line"></i>Навыки</a></li>
                     <li><a href="achievements.html" class="nav-link"><i class="fas fa-trophy"></i>Достижения</a></li>
                     <li class="nav-divider"></li>
-                    <li><a href="projects-main.html" class="nav-link nav-projects"><i class="fas fa-rocket"></i>Проекты</a></li>
+                    <li><a href="https://drive.google.com/drive/folders/1eCmPp1JmsctHa3zKNYDm6nJKT8qwWZoV?usp=sharing" class="nav-link nav-projects"><i class="fas fa-rocket"></i>Проекты</a></li>
                     <li><a href="contacts.html" class="nav-link nav-contacts"><i class="fas fa-envelope"></i>Контакты</a></li>
                 </ul>
             </nav>
